# legislinho

./: .gitignore_  LICENSE  README.md  bnb_4bit_training_template_project_legislinho_final.ipynb  bnb_4bit_training_template_project_legislinho_pre.ipynb  dataset_creation.ipynb  merging_lora.ipynb  pyproject.toml  running_model.ipynb
