[tool.poetry]
name = "legislinho"
version = "0.1.0"
description = ""
authors = ["m-da-costa <costa@maguscorp.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.8"
bitsandbytes = "^0.42.0"
transformers = "^4.37.0"
peft = "^0.7.1"
accelerate = "^0.26.1"
datasets = "^2.16.1"
jupyterlab = "^4.0.11"
sentencepiece = "^0.1.99"
protobuf = "^4.25.2"
packaging = "^23.2"
torchscale = "^0.3.0"
xformers = "^0.0.23.post1"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
